<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="24dp"
    app:cardCornerRadius="0dp"
    style="@style/cardStandard">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

    <TextView
        style="@style/bodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_signin"
        android:fontFamily="@font/dmsans_bold"
        android:textAlignment="center"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/usernameText"
            style="@style/smallBodyText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/dmsans_semibold"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="10dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/usernameEntry"
            style="@style/smallBodyText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/passwordText"
            style="@style/smallBodyText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/dmsans_semibold"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="10dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordEntry"
            style="@style/smallBodyText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/smallBodyText"
            android:layout_weight="1"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/cancel"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/smallBodyText"
            android:layout_weight="1"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/signin"
            android:layout_margin="4dp"/>
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>
