<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    style="@style/cardStandard"
    app:cardCornerRadius="0dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/passcodeRequiredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordRequired"
            style="@style/smallBodyText"
            android:fontFamily="@font/dmsans_bold"/>

        <EditText
            android:id="@+id/passcodeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:layout_marginTop="8dp"
            android:hint="@string/passcodeHint"
            android:inputType="numberPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="8dp">
            
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCancel"
                style="@style/subCardStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:paddingVertical="3dp"
                    android:text="@string/cancel"
                    android:fontFamily="@font/dmsans_semibold"
                    style="@style/smallBodyText"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubmit"
                style="@style/subCardStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="4dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardUseCompatPadding="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:paddingVertical="3dp"
                    android:text="@string/submit"
                    android:fontFamily="@font/dmsans_semibold"
                    style="@style/smallBodyText"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
